# cpp-militech

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
demos/lesson_5_1/05_healthcheck/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
demos/lesson_5_1/05_healthcheck/src/: health_check.cpp  healthctl.cpp  service.cpp
demos/lesson_5_3/robot_telemetry/: CMakeLists.txt  package.xml
demos/lesson_5_3/robot_telemetry/src/: status_monitor.cpp  telemetry_publisher.cpp
demos/lesson_5_4/01_typed_topic/robot_ws/src/typed_topic_demo/: CMakeLists.txt  package.xml
demos/lesson_5_4/02_custom_service/robot_ws/src/custom_service_demo/: CMakeLists.txt  package.xml
demos/lesson_5_4/03_service_status_topic/robot_ws/src/service_status_demo/: CMakeLists.txt  (+1 more)
homework_05/: CMakeLists.txt
homework_05/include/: telemetry.hpp
homework_05/src/: main.cpp  telemetry.cpp
homework_06/: CMakeLists.txt
homework_06/data/: ammo.json  invalid-ammo.txt
homework_06/include/: ballistics.hpp  debug.hpp
homework_06/src/: ballistics.cpp  main.cpp
homework_06/tests/: ballistics_tests.cpp
homework_07/: CMakeLists.txt
homework_07/data/basic/: simulation.json
homework_07/data/cardioids/: simulation.json  targets.json
homework_07/data/extreme/: simulation.json
homework_07/data/flower/: config.json  targets.json
homework_07/data/glidingammo/: simulation.json  targets.json
homework_07/data/heavyammo/: config.json  targets.json
homework_07/data/lissajous/: simulation.json
homework_07/data/loops/: simulation.json
homework_07/data/quickslow/: targets.json
homework_07/include/: ComponentFactory.hpp  IBallisticSolver.hpp  IConfigLoader.hpp  ITargetProvider.hpp  MissionProcessor.hpp  common.hpp  debug.hpp  factory.hpp  mission_processor.hpp  provider.hpp  target.hpp  util.hpp
homework_07/src/: AnalyticalSolver.cpp  ComponentFactory.cpp  FileConfigLoader.cpp  JsonTargetProvider.cpp  MissionProcessor.cpp  main.cpp  target.cpp  util.cpp
homework_08/: CMakeLists.txt
homework_08/data/cardioids/: config.json
homework_08/data/elliptic/: simulation.json  targets.json
homework_08/data/extreme/: config.json  simulation.json  targets.json
homework_08/data/flower/: simulation.json
homework_08/data/glidingammo/: config.json
homework_08/data/heavyammo/: simulation.json
homework_08/data/lissajous/: config.json
homework_08/data/loops/: targets.json
homework_08/data/quickslow/: config.json  simulation.json
homework_08/include/: ComponentFactory.h  MissionProcessor.h  Types.h  util.h
homework_08/include/config/: FileConfigLoader.h
homework_08/include/interfaces/: IBallisticSolver.h  IConfigLoader.h  ITargetProvider.h
homework_08/include/models/: Coord.h  Target.h
homework_08/include/providers/: JsonTargetProvider.h
homework_08/include/solvers/: AnalyticalSolver.h
homework_08/src/: MissionProcessor.cpp  StatCollector.cpp  main.cpp  util.cpp
homework_08/src/config/: ComponentFactory.cpp  FileConfigLoader.cpp
homework_08/src/models/: Coord.cpp  Target.cpp
homework_08/src/providers/: JsonTargetProvider.cpp
homework_08/src/solvers/: AnalyticalSolver.cpp
homework_10/: CMakeLists.txt
homework_10/include/: MissionProcessor.h  StatCollector.h  Types.h  util.h
homework_10/include/config/: ComponentFactory.h  FileConfigLoader.h
homework_10/include/interfaces/: IBallisticSolver.h  IDroneState.h  ITargetProvider.h
homework_10/include/models/: BallisticTable.h  Target.h
homework_10/include/providers/: ThreadSafeTargetProvider.h
homework_10/include/solvers/: AnalyticalSolver.h
homework_10/include/states/: StateStopped.h
homework_10/src/: DronePhysics.cpp  MissionProcessor.cpp  StatCollector.cpp  main.cpp  util.cpp
homework_10/src/config/: ComponentFactory.cpp
homework_10/src/providers/: JsonTargetProvider.cpp  ThreadSafeTargetProvider.cpp
homework_10/src/states/: StateAccelerating.cpp  StateDecelerating.cpp  StateMoving.cpp  StateStopped.cpp  StateTurning.cpp
homework_11/: CMakeLists.txt
homework_11/include/: DronePhysics.h  ThreadSafeQueue.h  Types.h  UartMissionProcessor.h  debug.h
homework_11/include/comms/: Frame.h  Serial.h  SerialLink.h
homework_11/include/config/: ComponentFactory.h  UartConfigLoader.h
homework_11/include/control/: FlightController.h
homework_11/include/gpio/: IGpioController.h  LibGpiodController.h
homework_11/include/interfaces/: IBallisticSolver.h  IConfigLoader.h
homework_11/include/models/: Coord.h  FireGeometry.h  Telem.h  drone_link.h
homework_11/include/providers/: UartTargetProvider.h
homework_11/include/solvers/: AnalyticalSolver.h  TableSolver.h
homework_11/src/: DronePhysics.cpp  MissionProcessor.cpp  UartMissionProcessor.cpp  main.cpp
homework_11/src/comms/: Serial.cpp  SerialLink.cpp
homework_11/src/config/: ComponentFactory.cpp  FileConfigLoader.cpp  UartConfigLoader.cpp
homework_11/src/control/: FlightController.cpp
homework_11/src/gpio/: LibGpiodController.cpp
homework_11/src/models/: BallisticTable.cpp  FireGeometry.cpp
homework_11/src/providers/: UartTargetProvider.cpp
homework_11/src/solvers/: AnalyticalSolver.cpp  TableSolver.cpp
homework_11/src/states/: StateAccelerating.cpp
homework_12/edge/c2/: CMakeLists.txt  Dockerfile
homework_12/edge/c2/src/: c2_controller.cpp  c2_controller.hpp  fc_link.cpp  fc_link.hpp  main.cpp  udp_socket.hpp
homework_13/robot_ws/src/antidrone_turret/: CMakeLists.txt  package.xml
homework_13/robot_ws/src/antidrone_turret/config/: sequence.yaml
homework_13/robot_ws/src/antidrone_turret/launch/: system.launch.py
homework_13/robot_ws/src/antidrone_turret/msg/: Target.msg
homework_13/robot_ws/src/antidrone_turret/src/: actuator_node.cpp  target_track_publisher_node.cpp
homework_13/robot_ws/src/antidrone_turret/srv/: TriggerActuator.srv
homework_13/robot_ws/src/antidrone_turret/test/: provided_logic_test.cpp
homework_13/robot_ws/src/antidrone_turret/tracks/: approach_trigger.csv  far_flyby_no_trigger.csv  low_confidence_no_trigger.csv  reload_pressure.csv
(+142 files in other folders)
