<?xml version="1.0"?>
<package format="3">
  <name>service_status_demo</name>
  <version>0.1.0</version>
  <description>Small ROS 2 service plus status topic demo for Block 5 / Lesson 5.4.</description>

  <maintainer email="robot-dreams@example.com">robot_dreams</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
