<?xml version="1.0"?>
<package format="3">
  <name>parameters_demo</name>
  <version>0.1.0</version>
  <description>Small ROS 2 parameters and YAML demo for Block 5 / Lesson 5.4.</description>

  <maintainer email="robot-dreams@example.com">robot_dreams</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <depend>rclcpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
